--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*Navigation*/
+.header{
+  background-color: #2874f0;
+  width: 100%;
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  position: fixed;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 3.5rem;
+  background-color: #2874f0;
+  padding:30px 0px ;
 }
-
-.App-link {
-  color: #61dafb;
+.nav-logo{
+  display: block;
+  line-height: 0%;
+  width: 10%;
+  cursor: pointer;
+   
 }
+.nav-logo .logo img{
+  width: 50%;
+}
+.plus{
+  width: 80%;
+}
+.plus i{
+  color: #f0f0f0;
+  font-size: 11px;
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.plus span{
+  color: #ffe500;
+}
+.plus img{
+  width: 15px;
+}
+.searchHold{
+  display: inline-block;
+  width:40%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.searchHold input{
+  width: 100%;
+  padding: 10px 16px;
+  margin-left: 0;
+}
+.nav-link{
+  display: flex;
+  gap:20px;
+  margin-left: 20px;
+}
+.nav-link div{
+  align-self: center;
+  cursor: pointer;
 }
